application-production.properties edited

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -5,6 +5,7 @@
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
+spring.datasource.driver-class-name=org.postgresql.Driver # <-- THIS IS THE FIX
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Disable H2 console and detailed error messages in production for security
@@ -21,4 +22,6 @@ spring.thymeleaf.cache=true
 
 # File uploads on Render are temporary. We save to a local 'uploads' directory.
 file.upload-dir=./uploads
+
+    
 
