--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
 
     </dependencies>
 
@@ -64,6 +69,7 @@
             </plugin>
         </plugins>
     </build>
+    
     <!-- Final deployment check -->
 </project>
 
