--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # Server Configuration
-server.port=8081
+# This tells Spring to use the PORT environment variable if it exists, 
+# otherwise default to 8081 for local use.
+server.port=${PORT:8081}
 server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=always
@@ -34,4 +36,3 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
